--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:8000",
+  "proxy": "https://szz-react-server.vercel.app",
   "dependencies": {
     "@mdi/js": "^6.9.96",
     "@mdi/react": "^1.6.0",
